--- a/simple.html
+++ b/simple.html
@@ -2,7 +2,7 @@
 <!--
 	Copyright Git.Training
 <head>
-	<title>An Example Website</title>
+	<title>A Very Respectable Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -16,11 +16,11 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Im not sure what will go here, but im sure it will be nice
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; jason taylor</p>
 	</footer>
 </body>
 </html>
