--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!--
 	Copyright Git.Training
+	Adding changes before rebasing conflicts
 <head>
 	<title>A Very Respectable Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
