--- a/simple.html
+++ b/simple.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <!--
 	Copyright Git.Training
-	Adding changes before rebasing conflicts
+	Some silly changes from master branch
 <head>
-	<title>A Very Respectable Website</title>
+	<title>Silly changes on master</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -15,9 +15,10 @@
 </head>
 <body>
 	<main class="container">
-	<!-- Content Goes Here -->
+	<!-- Junk filter content-->
 		<p>
-			Just some content
+			Just stuff for now,
+			Not sure if we should replace this or not
 		</p>
 	</main>
 	<footer class="container">
